<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    tools:context=".RegisterOtpActivity">
    <ImageView
        android:id="@+id/otpLogo"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/otp_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imagedescription" />

    <TextView
        android:id="@+id/otpTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/otp_has_been_sent_to_your_mobile_phone_please_enter_it_below"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpLogo" />

    <EditText
        android:id="@+id/RegOtpEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="88dp"
        android:hint="@string/enter_otp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otpTxt"
        android:importantForAutofill="no" />


    <TextView
        android:id="@+id/RegResendOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="end"
        android:text="@string/resend_otp"
        android:textStyle="bold"
        android:visibility="gone"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/RegOtpEditText"
        app:layout_constraintBottom_toTopOf="@id/RegVerifyOtp"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/RegDisableResendOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="end"
        android:text="@string/resend_otp"
        android:textColor="@color/Darkgrey"
        app:layout_constraintTop_toBottomOf="@id/RegOtpEditText"
        app:layout_constraintBottom_toTopOf="@id/RegVerifyOtp"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/RegResendCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/RegOtpEditText"
        app:layout_constraintBottom_toTopOf="@id/RegVerifyOtp"
        app:layout_constraintEnd_toStartOf="@id/RegDisableResendOtp"
        android:textAllCaps="true"
        android:text="@string/_00_00" />

    <Button
        android:id="@+id/RegVerifyOtp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:background="@drawable/select_education_selected_radiobtn"
        android:text="@string/verify"
        android:layout_marginTop="100dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/RegOtpEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>