<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.CreateJobAlert.CreateJobAlertActivity">
<androidx.appcompat.widget.Toolbar
    android:id="@+id/alertToolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:title="Create alert"
    app:titleTextColor="@color/white"
    android:minHeight="?actionBarSize"
    android:background="@color/colorPrimary"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="0dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/alertToolbar"
       app:layout_constraintBottom_toBottomOf="parent">
       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <EditText
               android:id="@+id/nameOfAlert"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/name_of_alert"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp"
               android:layout_marginTop="20dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:importantForAutofill="no"
               />

           <EditText
               android:id="@+id/AlertSkill"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/enter_skills"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp"
               android:layout_marginTop="20dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@id/nameOfAlert"
               android:importantForAutofill="no"
               />

           <EditText
               android:id="@+id/AlertLocation"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/enter_location"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp"
               android:layout_marginTop="20dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@id/AlertSkill"
               android:importantForAutofill="no"
               />

           <EditText
               android:id="@+id/AlertExperience"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/enter_experience"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp"
               android:layout_marginTop="20dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@id/AlertLocation"
               android:importantForAutofill="no"
               />

           <EditText
               android:id="@+id/AlertSalary"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/annual_salary"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp"
               android:layout_marginTop="20dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@id/AlertExperience"
               android:importantForAutofill="no"
               />

           <EditText
               android:id="@+id/AlertFunctionalArea"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/functional_area"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp"
               android:layout_marginTop="20dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@id/AlertSalary"
               android:importantForAutofill="no"
               />

           <EditText
               android:id="@+id/AlertIndustry"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/industry"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp"
               android:layout_marginTop="20dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@id/AlertFunctionalArea"
               android:importantForAutofill="no"
               />

           <Button
               android:id="@+id/createAlertBtn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="30dp"
               android:layout_marginTop="50dp"
               android:layout_marginRight="30dp"
               android:layout_marginBottom="30dp"
               android:background="@drawable/select_education_selected_radiobtn"
               android:text="@string/create_job_alert"
               android:textColor="@color/white"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintTop_toBottomOf="@id/AlertIndustry" />

       </androidx.constraintlayout.widget.ConstraintLayout>
   </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>