<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginPasswordActivity">

    <ImageView
        android:id="@+id/loginPasswordImg"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/enter_password"
        app:layout_constraintBottom_toTopOf="@id/enterPasswordTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imagedescription" />

    <TextView
        android:id="@+id/enterPasswordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/enter_password"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/contTxt"
        app:layout_constraintTop_toBottomOf="@id/loginPasswordImg"/>

    <TextView
        android:id="@+id/contTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_just_need_your_password_to_login"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginPasswordEditTxt"
        app:layout_constraintTop_toBottomOf="@id/enterPasswordTxt"/>

    <EditText
        android:id="@+id/loginPasswordEditTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contTxt"
        android:importantForAutofill="no"
        />

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="end"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPasswordEditTxt"
/>

    <Button
        android:id="@+id/verifyLoginPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:background="@drawable/select_education_selected_radiobtn"
        android:text="@string/verify"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgetPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>